# roomba_env

./: .gitignore  CMakeLists.txt  README.md
roomba/: CMakeLists.txt  roomba.c
roomba/control_files/include/: ba_algorithm.h  control.h  (+14 more)
roomba/log/: decisions.txt  decisions_ba.txt  log_cov.txt  map.txt  map_ba.txt  map_cov.txt  map_parent.txt  map_rg.txt  map_swf.txt  map_swf_bt.txt  map_swf_new_loop.txt  quarters.txt
roomba/plan/: corner_center_comparison.m  create_plan.m  generated_plans_analysis.m  plan_binary.txt  plan_binary1.txt  plan_binary2.txt  plan_binary2_v2.txt  plan_binary7_1cm.txt  plan_binary8.txt  plan_binary_small_circle.txt  plan_clover.txt  plan_narrow.txt  plan_obstacles.txt  plan_showcase_stc_ba.txt  qi_analysis.asv  qi_analysis.m  qi_analysis_center.m  qi_analysis_corner.m  trashes.txt
roomba/test_plans/: plan_narrow.txt  plan_obstacles.txt
roomba/tests_results/: log_ba_clover_center.txt  log_ba_clover_corner.txt  log_ba_narrow_center.txt  log_ba_narrow_corner.txt  log_ba_obstacles_center.txt  log_ba_obstacles_corner.txt  log_ba_showcase_center.txt  log_ba_showcase_corner.txt  log_clover_center.txt  log_dwa_clover.txt  log_dwa_clover_center.txt  log_dwa_clover_corner.txt  log_dwa_narrow_center.txt  log_dwa_narrow_corner.txt  log_dwa_obstacles_center.txt  log_dwa_obstacles_corner.txt  log_dwa_showcase_center.txt  log_dwa_showcase_corner.txt  log_rg_clover_center.txt  log_rg_clover_corner.txt  log_rg_narrow_center.txt  log_rg_narrow_corner.txt  log_rg_obstacles_center.txt  log_rg_obstacles_corner.txt  log_rg_showcase_center.txt  log_rg_showcase_corner.txt  log_stc_clover_center.txt  log_stc_clover_corner.txt  log_stc_narrow_center.txt  log_stc_narrow_corner.txt  log_stc_obstacles_center.txt  log_stc_obstacles_corner.txt  log_stc_showcase_center.txt  log_stc_showcase_corner.txt
roomba/vis_files/: vis.py
(+53 files in other folders)
